# vani-tts

./: .gitignore  README.md  main.py  meldataset.py  models.py  prepare_hindi_data.py  pyproject.toml  train_finetune.py  utils.py
Configs/: config_ft.yml
Utils/ASR/: config.yml
monotonic_align/: __init__.py  core.py  core.pyx  setup.py
