[project]
name = "vani-training"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "einops>=0.8.2",
    "einops-exts>=0.0.4",
    "espeakng-loader>=0.2.4",
    "gdown>=5.2.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "misaki>=0.9.4",
    "munch>=4.0.0",
    "pandas>=3.0.1",
    "phonemizer>=3.3.0",
    "pyyaml>=6.0.3",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.2.0",
]
